[gd_scene load_steps=5 format=3 uid="uid://dv3ofoveh7hmd"]

[ext_resource type="Script" uid="uid://bux388l14v2j" path="res://info.gd" id="1_ugdrp"]
[ext_resource type="Texture2D" uid="uid://cuqo3f74cw5if" path="res://Assets/book.png" id="2_qjrxf"]
[ext_resource type="Texture2D" uid="uid://dbqr6avmwvcr7" path="res://Assets/arrow.png" id="3_qjrxf"]
[ext_resource type="Texture2D" uid="uid://obtp1m0fkst7" path="res://Assets/home.png" id="4_ahul7"]

[node name="Info" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ugdrp")
metadata/_edit_horizontal_guides_ = [136.0, 411.0]

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -2.0
offset_right = 1920.0
offset_bottom = 1079.0
texture = ExtResource("2_qjrxf")
expand_mode = 1

[node name="Right_page" type="RichTextLabel" parent="."]
offset_left = 614.0
offset_top = 137.0
offset_right = 898.0
offset_bottom = 411.0
bbcode_enabled = true

[node name="Left_page" type="RichTextLabel" parent="."]
offset_left = 242.0
offset_top = 136.0
offset_right = 533.0
offset_bottom = 412.0
bbcode_enabled = true

[node name="nextbutton" type="Sprite2D" parent="."]
position = Vector2(1469, 761)
rotation = 3.14159
scale = Vector2(0.0700649, -0.0773661)
texture = ExtResource("3_qjrxf")

[node name="prevbutton" type="Sprite2D" parent="."]
position = Vector2(401, 763)
scale = Vector2(0.0737305, 0.0766602)
texture = ExtResource("3_qjrxf")

[node name="next_button" type="Button" parent="."]
offset_left = 1433.0
offset_top = 735.0
offset_right = 1500.0
offset_bottom = 794.0

[node name="prev_button" type="Button" parent="."]
offset_left = 378.0
offset_top = 741.0
offset_right = 428.0
offset_bottom = 792.0

[node name="home" type="Sprite2D" parent="."]
position = Vector2(1430, 242)
scale = Vector2(0.142334, 0.115479)
texture = ExtResource("4_ahul7")

[node name="home_btn" type="Button" parent="."]
offset_left = 1390.0
offset_top = 219.0
offset_right = 1470.0
offset_bottom = 274.0
